--- a/components/data-table.html
+++ b/components/data-table.html
@@ -445,9 +445,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.9.4" data-path="survey-generator.md">
+        <li class="chapter " data-level="1.4.9.4" data-path="survey-generator.html">
             
-                <span>
+                <a href="survey-generator.html">
             
                     
                     Survey Generator
@@ -806,9 +806,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.14" data-path="../chapters/metrics.md">
+        <li class="chapter " data-level="1.4.14" data-path="../chapters/metrics.html">
             
-                <span>
+                <a href="../chapters/metrics.html">
             
                     
                     Metrics
@@ -1677,14 +1677,19 @@
                                 <section class="normal markdown-section">
                                 
                                 <h1 id="data-table">Data Table</h1>
-<p>A number question component. Usually, this will be used as part of an <a href="dashboard.html">ISLE dashboard</a>, but it can also be used standalone. In this case, you want to handle changes via the <code>onChange</code> attribute. </p>
+<p>A component rendering data in a tabular display. Built on top of <a href="https://react-table.js.org/" target="_blank">react-table</a>.</p>
 <h4 id="example">Example:</h4>
 <pre class="language-"><code class="lang-js"><span class="token operator">&lt;</span>DataTable
-    question<span class="token operator">=</span><span class="token string">&quot;What is the number PI - three digits after the period&quot;</span>
-    solution<span class="token operator">=</span><span class="token punctuation">{</span><span class="token number">3.142</span><span class="token punctuation">}</span>
+    showRemove
+    onClickRemove<span class="token operator">=</span><span class="token punctuation">{</span><span class="token punctuation">(</span> data <span class="token punctuation">)</span> <span class="token operator">=</span><span class="token operator">&gt;</span> <span class="token punctuation">{</span> console<span class="token punctuation">.</span><span class="token function">log</span><span class="token punctuation">(</span>data<span class="token punctuation">)</span><span class="token punctuation">;</span> <span class="token punctuation">}</span><span class="token punctuation">}</span>
+    data<span class="token operator">=</span><span class="token punctuation">{</span><span class="token punctuation">{</span> 
+        firstName<span class="token punctuation">:</span> <span class="token punctuation">[</span> <span class="token string">&apos;Hans&apos;</span><span class="token punctuation">,</span> <span class="token string">&apos;Lotti&apos;</span><span class="token punctuation">,</span> <span class="token string">&apos;Fritz&apos;</span> <span class="token punctuation">]</span><span class="token punctuation">,</span> 
+        lastName<span class="token punctuation">:</span> <span class="token punctuation">[</span> <span class="token string">&apos;Bauer&apos;</span><span class="token punctuation">,</span> <span class="token string">&apos;M&#xFC;ller&apos;</span><span class="token punctuation">,</span> <span class="token string">&apos;Schultz&apos;</span> <span class="token punctuation">]</span><span class="token punctuation">,</span>
+        age<span class="token punctuation">:</span> <span class="token punctuation">[</span> <span class="token number">37</span><span class="token punctuation">,</span> <span class="token number">55</span><span class="token punctuation">,</span> <span class="token number">62</span> <span class="token punctuation">]</span>
+    <span class="token punctuation">}</span><span class="token punctuation">}</span>
 <span class="token operator">/</span><span class="token operator">&gt;</span>
 </code></pre>
-<p><a href="https://isle.heinz.cmu.edu/components/number-question/" target="_blank">Open interactive preview</a></p>
+<p><a href="https://isle.heinz.cmu.edu/components/data-table" target="_blank">Open interactive preview</a></p>
 <h4 id="options">Options:</h4>
 <ul>
 <li><strong>data</strong>: <code>object</code> holding a multitude of arrays.  </li>
@@ -1735,7 +1740,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Data Table","level":"1.4.3","depth":2,"next":{"title":"Display","level":"1.4.4","depth":2,"path":"chapters/display.md","ref":"chapters/display.md","articles":[{"title":"Draggable Grid","level":"1.4.4.1","depth":3,"path":"components/draggable-grid.md","ref":"components/draggable-grid.md","articles":[]},{"title":"Draggable List","level":"1.4.4.2","depth":3,"path":"components/draggable-list.md","ref":"components/draggable-list.md","articles":[]},{"title":"Enlargeable Grid","level":"1.4.4.3","depth":3,"path":"components/enleargeable-grid.md","ref":"components/enleargeable-grid.md","articles":[]},{"title":"Grid","level":"1.4.4.4","depth":3,"path":"components/grid.md","ref":"components/grid.md","articles":[]},{"title":"Pages","level":"1.4.4.5","depth":3,"path":"components/pages.md","ref":"components/pages.md","articles":[]},{"title":"Slider","level":"1.4.4.6","depth":3,"path":"components/slider.md","ref":"components/slider.md","articles":[]},{"title":"Switch","level":"1.4.4.7","depth":3,"path":"components/switch.md","ref":"components/switch.md","articles":[]}]},"previous":{"title":"Data Explorer","level":"1.4.2","depth":2,"path":"components/data-explorer.md","ref":"components/data-explorer.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/data-table.md","mtime":"2017-12-29T20:02:06.990Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2017-12-30T12:27:22.553Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Data Table","level":"1.4.3","depth":2,"next":{"title":"Display","level":"1.4.4","depth":2,"path":"chapters/display.md","ref":"chapters/display.md","articles":[{"title":"Draggable Grid","level":"1.4.4.1","depth":3,"path":"components/draggable-grid.md","ref":"components/draggable-grid.md","articles":[]},{"title":"Draggable List","level":"1.4.4.2","depth":3,"path":"components/draggable-list.md","ref":"components/draggable-list.md","articles":[]},{"title":"Enlargeable Grid","level":"1.4.4.3","depth":3,"path":"components/enleargeable-grid.md","ref":"components/enleargeable-grid.md","articles":[]},{"title":"Grid","level":"1.4.4.4","depth":3,"path":"components/grid.md","ref":"components/grid.md","articles":[]},{"title":"Pages","level":"1.4.4.5","depth":3,"path":"components/pages.md","ref":"components/pages.md","articles":[]},{"title":"Slider","level":"1.4.4.6","depth":3,"path":"components/slider.md","ref":"components/slider.md","articles":[]},{"title":"Switch","level":"1.4.4.7","depth":3,"path":"components/switch.md","ref":"components/switch.md","articles":[]}]},"previous":{"title":"Data Explorer","level":"1.4.2","depth":2,"path":"components/data-explorer.md","ref":"components/data-explorer.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/data-table.md","mtime":"2017-12-30T12:34:37.000Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2017-12-30T12:36:18.339Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
