--- a/components/r-table.html
+++ b/components/r-table.html
@@ -445,9 +445,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.9.4" data-path="survey-generator.md">
+        <li class="chapter " data-level="1.4.9.4" data-path="survey-generator.html">
             
-                <span>
+                <a href="survey-generator.html">
             
                     
                     Survey Generator
@@ -806,9 +806,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.14" data-path="../chapters/metrics.md">
+        <li class="chapter " data-level="1.4.14" data-path="../chapters/metrics.html">
             
-                <span>
+                <a href="../chapters/metrics.html">
             
                     
                     Metrics
@@ -1677,7 +1677,7 @@
                                 <section class="normal markdown-section">
                                 
                                 <h1 id="r-table">R Table</h1>
-<p>Component for rendering a R data frame or matrix in a tabular display. This component uses the <a href="http://facebook.github.io/fixed-data-table" target="_blank">fixed-data-package</a> library under the hood.</p>
+<p>Component for rendering a R data frame or matrix in a tabular display.</p>
 <h4 id="example">Example:</h4>
 <pre class="language-"><code class="lang-js"><span class="token operator">&lt;</span>RTable
     code<span class="token operator">=</span><span class="token punctuation">{</span><span class="token template-string"><span class="token string">`data &lt;- matrix( runif(16), nrow=4, ncol=4)
@@ -1737,7 +1737,7 @@ data`</span></span><span class="token punctuation">}</span>
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"R Table","level":"1.4.17.5","depth":3,"next":{"title":"Spectacle Presentation","level":"1.4.18","depth":2,"path":"chapters/spectacle.md","ref":"chapters/spectacle.md","articles":[]},"previous":{"title":"R Shell","level":"1.4.17.4","depth":3,"path":"components/r-shell.md","ref":"components/r-shell.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/r-table.md","mtime":"2017-12-27T18:30:15.687Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2017-12-30T12:27:22.553Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"R Table","level":"1.4.17.5","depth":3,"next":{"title":"Spectacle Presentation","level":"1.4.18","depth":2,"path":"chapters/spectacle.md","ref":"chapters/spectacle.md","articles":[]},"previous":{"title":"R Shell","level":"1.4.17.4","depth":3,"path":"components/r-shell.md","ref":"components/r-shell.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/r-table.md","mtime":"2017-12-30T12:33:27.921Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2017-12-30T12:36:18.339Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
