--- a/components/slider.html
+++ b/components/slider.html
@@ -445,9 +445,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.9.4" data-path="survey-generator.md">
+        <li class="chapter " data-level="1.4.9.4" data-path="survey-generator.html">
             
-                <span>
+                <a href="survey-generator.html">
             
                     
                     Survey Generator
@@ -806,9 +806,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.14" data-path="../chapters/metrics.md">
+        <li class="chapter " data-level="1.4.14" data-path="../chapters/metrics.html">
             
-                <span>
+                <a href="../chapters/metrics.html">
             
                     
                     Metrics
@@ -1737,7 +1737,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Slider","level":"1.4.4.6","depth":3,"next":{"title":"Switch","level":"1.4.4.7","depth":3,"path":"components/switch.md","ref":"components/switch.md","articles":[]},"previous":{"title":"Pages","level":"1.4.4.5","depth":3,"path":"components/pages.md","ref":"components/pages.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/slider.md","mtime":"2017-12-29T20:02:07.026Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2017-12-30T12:27:22.553Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Slider","level":"1.4.4.6","depth":3,"next":{"title":"Switch","level":"1.4.4.7","depth":3,"path":"components/switch.md","ref":"components/switch.md","articles":[]},"previous":{"title":"Pages","level":"1.4.4.5","depth":3,"path":"components/pages.md","ref":"components/pages.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/slider.md","mtime":"2017-12-29T20:02:07.026Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2017-12-30T12:36:18.339Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
