--- a/components/survey-generator.html
+++ b/components/survey-generator.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
-        <title>Switch · ISLE Editor Documentation</title>
+        <title>Survey Generator · ISLE Editor Documentation</title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="description" content="">
         <meta name="generator" content="GitBook 3.2.2">
@@ -61,10 +61,10 @@
     <link rel="shortcut icon" href="../gitbook/images/favicon.ico" type="image/x-icon">
 
     
-    <link rel="next" href="experiment.md" />
+    <link rel="next" href="../chapters/helper.html" />
     
     
-    <link rel="prev" href="slider.html" />
+    <link rel="prev" href="proportions-survey.html" />
     
 
     </head>
@@ -322,7 +322,7 @@
             
         </li>
     
-        <li class="chapter active" data-level="1.4.4.7" data-path="switch.html">
+        <li class="chapter " data-level="1.4.4.7" data-path="switch.html">
             
                 <a href="switch.html">
             
@@ -445,7 +445,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.9.4" data-path="survey-generator.html">
+        <li class="chapter active" data-level="1.4.9.4" data-path="survey-generator.html">
             
                 <a href="survey-generator.html">
             
@@ -1661,7 +1661,7 @@
     <!-- Title -->
     <h1>
         <i class="fa fa-circle-o-notch fa-spin"></i>
-        <a href=".." >Switch</a>
+        <a href=".." >Survey Generator</a>
     </h1>
 </div>
 
@@ -1676,19 +1676,7 @@
     
                                 <section class="normal markdown-section">
                                 
-                                <h1 id="switch-components">Switch Components</h1>
-<p>The Switch component allows the display of one element out of a list of several elements. Users can cycle through the different children of the Switch tag by clicking on the currently displayed one.</p>
-<h4 id="example">Example:</h4>
-<pre class="language-"><code class="lang-js"><span class="token operator">&lt;</span>Switch<span class="token operator">&gt;</span>
-    <span class="token operator">&lt;</span>span<span class="token operator">&gt;</span>Option <span class="token number">1</span><span class="token operator">&lt;</span><span class="token operator">/</span>span<span class="token operator">&gt;</span>
-    <span class="token operator">&lt;</span>span<span class="token operator">&gt;</span>Option <span class="token number">2</span><span class="token operator">&lt;</span><span class="token operator">/</span>span<span class="token operator">&gt;</span>
-<span class="token operator">&lt;</span><span class="token operator">/</span>Switch<span class="token operator">&gt;</span>
-</code></pre>
-<p><a href="https://isle.heinz.cmu.edu/components/switch/" target="_blank">Open interactive preview</a></p>
-<h4 id="options">Options:</h4>
-<ul>
-<li><strong>onChange</strong>: Callback <code>function</code> invoked when elements are switched. Receives as its first argument <code>pos</code> the index of the currently displayed child. Default: <code>null</code></li>
-</ul>
+                                <h1 id="survey-generator">Survey Generator</h1>
 
                                 
                                 </section>
@@ -1716,12 +1704,12 @@
 
             
                 
-                <a href="slider.html" class="navigation navigation-prev " aria-label="Previous page: Slider">
+                <a href="proportions-survey.html" class="navigation navigation-prev " aria-label="Previous page: Proportions Survey">
                     <i class="fa fa-angle-left"></i>
                 </a>
                 
                 
-                <a href="experiment.md" class="navigation navigation-next " aria-label="Next page: Experiment">
+                <a href="../chapters/helper.html" class="navigation navigation-next " aria-label="Next page: Helper">
                     <i class="fa fa-angle-right"></i>
                 </a>
                 
@@ -1732,7 +1720,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Switch","level":"1.4.4.7","depth":3,"next":{"title":"Experiment","level":"1.4.5","depth":2,"path":"components/experiment.md","ref":"components/experiment.md","articles":[]},"previous":{"title":"Slider","level":"1.4.4.6","depth":3,"path":"components/slider.md","ref":"components/slider.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/switch.md","mtime":"2017-12-27T18:30:28.991Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2017-12-30T12:36:18.339Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Survey Generator","level":"1.4.9.4","depth":3,"next":{"title":"Helper","level":"1.4.10","depth":2,"path":"chapters/helper.md","ref":"chapters/helper.md","articles":[{"title":"Clock","level":"1.4.10.1","depth":3,"path":"components/clock.md","ref":"components/clock.md","articles":[]},{"title":"Color Picker","level":"1.4.10.2","depth":3,"path":"components/color-picker.md","ref":"components/color-picker.md","articles":[]},{"title":"Date Range Picker","level":"1.4.10.3","depth":3,"path":"components/date-range-picker.md","ref":"components/date-range-picker.md","articles":[]},{"title":"JSShell","level":"1.4.10.4","depth":3,"path":"components/js-shell.md","ref":"components/js-shell.md","articles":[]},{"title":"Markdown Editor","level":"1.4.10.5","depth":3,"path":"components/markdown-editor.md","ref":"components/markdown-editor.md","articles":[]},{"title":"Playground","level":"1.4.10.6","depth":3,"path":"components/playground.md","ref":"components/playground.md","articles":[]},{"title":"Spinner","level":"1.4.10.7","depth":3,"path":"components/spinner.md","ref":"components/spinner.md","articles":[]},{"title":"Timer","level":"1.4.10.8","depth":3,"path":"components/timer.md","ref":"components/timer.md","articles":[]},{"title":"Tooltip","level":"1.4.10.9","depth":3,"path":"components/tooltip.md","ref":"components/tooltip.md","articles":[]}]},"previous":{"title":"Proportions Survey","level":"1.4.9.3","depth":3,"path":"components/proportions-survey.md","ref":"components/proportions-survey.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/survey-generator.md","mtime":"2017-12-30T12:35:05.474Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2017-12-30T12:36:18.339Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
