--- a/components/video-player.html
+++ b/components/video-player.html
@@ -61,7 +61,7 @@
     <link rel="shortcut icon" href="../gitbook/images/favicon.ico" type="image/x-icon">
 
     
-    <link rel="next" href="../chapters/metrics.md" />
+    <link rel="next" href="../chapters/metrics.html" />
     
     
     <link rel="prev" href="recorder.html" />
@@ -445,9 +445,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.9.4" data-path="survey-generator.md">
+        <li class="chapter " data-level="1.4.9.4" data-path="survey-generator.html">
             
-                <span>
+                <a href="survey-generator.html">
             
                     
                     Survey Generator
@@ -806,9 +806,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.14" data-path="../chapters/metrics.md">
+        <li class="chapter " data-level="1.4.14" data-path="../chapters/metrics.html">
             
-                <span>
+                <a href="../chapters/metrics.html">
             
                     
                     Metrics
@@ -1726,7 +1726,7 @@
                 </a>
                 
                 
-                <a href="../chapters/metrics.md" class="navigation navigation-next " aria-label="Next page: Metrics">
+                <a href="../chapters/metrics.html" class="navigation navigation-next " aria-label="Next page: Metrics">
                     <i class="fa fa-angle-right"></i>
                 </a>
                 
@@ -1737,7 +1737,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Video Player","level":"1.4.13.4","depth":3,"next":{"title":"Metrics","level":"1.4.14","depth":2,"path":"chapters/metrics.md","ref":"chapters/metrics.md","articles":[{"title":"DB","level":"1.4.14.1","depth":3,"path":"components/db-metrics.md","ref":"components/db-metrics.md","articles":[]},{"title":"Realtime","level":"1.4.14.2","depth":3,"path":"components/realtime-metrics.md","ref":"components/realtime-metrics.md","articles":[]}]},"previous":{"title":"Recorder","level":"1.4.13.3","depth":3,"path":"components/recorder.md","ref":"components/recorder.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/video-player.md","mtime":"2017-12-27T18:30:53.450Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2017-12-30T12:27:22.553Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Video Player","level":"1.4.13.4","depth":3,"next":{"title":"Metrics","level":"1.4.14","depth":2,"path":"chapters/metrics.md","ref":"chapters/metrics.md","articles":[{"title":"DB","level":"1.4.14.1","depth":3,"path":"components/db-metrics.md","ref":"components/db-metrics.md","articles":[]},{"title":"Realtime","level":"1.4.14.2","depth":3,"path":"components/realtime-metrics.md","ref":"components/realtime-metrics.md","articles":[]}]},"previous":{"title":"Recorder","level":"1.4.13.3","depth":3,"path":"components/recorder.md","ref":"components/recorder.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/video-player.md","mtime":"2017-12-27T18:30:53.450Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2017-12-30T12:36:18.339Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
