--- a/components/r-plot.html
+++ b/components/r-plot.html
@@ -204,9 +204,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.2" data-path="data-explorer.md">
+        <li class="chapter " data-level="1.4.2" data-path="data-explorer.html">
             
-                <span>
+                <a href="data-explorer.html">
             
                     
                     Data Explorer
@@ -340,9 +340,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.5" data-path="experiment.md">
+        <li class="chapter " data-level="1.4.5" data-path="experiment.html">
             
-                <span>
+                <a href="experiment.html">
             
                     
                     Experiment
@@ -419,9 +419,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.9.2" data-path="number-survey.md">
+        <li class="chapter " data-level="1.4.9.2" data-path="number-survey.html">
             
-                <span>
+                <a href="number-survey.html">
             
                     
                     Number Survey
@@ -749,9 +749,9 @@
             <ul class="articles">
                 
     
-        <li class="chapter " data-level="1.4.13.1" data-path="iframe.md">
+        <li class="chapter " data-level="1.4.13.1" data-path="iframe.html">
             
-                <span>
+                <a href="iframe.html">
             
                     
                     IFrame
@@ -762,9 +762,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.13.2" data-path="image.md">
+        <li class="chapter " data-level="1.4.13.2" data-path="image.html">
             
-                <span>
+                <a href="image.html">
             
                     
                     Image
@@ -943,9 +943,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.15.7" data-path="word-cloud.md">
+        <li class="chapter " data-level="1.4.15.7" data-path="word-cloud.html">
             
-                <span>
+                <a href="word-cloud.html">
             
                     
                     Word Cloud
@@ -1613,6 +1613,32 @@
             
         </li>
     
+        <li class="chapter " data-level="1.6.4" data-path="login.html">
+            
+                <a href="login.html">
+            
+                    
+                    Login
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.6.5" data-path="signup.html">
+            
+                <a href="signup.html">
+            
+                    
+                    Signup
+            
+                </a>
+            
+
+            
+        </li>
+    
 
             </ul>
             
@@ -1735,7 +1761,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"R Plot","level":"1.4.15.5","depth":3,"next":{"title":"Victory","level":"1.4.15.6","depth":3,"path":"components/victory.md","ref":"components/victory.md","articles":[]},"previous":{"title":"Plotly","level":"1.4.15.4","depth":3,"path":"components/plotly.md","ref":"components/plotly.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/r-plot.md","mtime":"2017-12-28T10:47:44.000Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2017-12-30T12:36:18.339Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"R Plot","level":"1.4.15.5","depth":3,"next":{"title":"Victory","level":"1.4.15.6","depth":3,"path":"components/victory.md","ref":"components/victory.md","articles":[]},"previous":{"title":"Plotly","level":"1.4.15.4","depth":3,"path":"components/plotly.md","ref":"components/plotly.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/r-plot.md","mtime":"2017-12-28T10:47:44.000Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2017-12-30T12:53:13.746Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
