--- a/components/data-explorer.html
+++ b/components/data-explorer.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
-        <title>Playground · ISLE Editor Documentation</title>
+        <title>Data Explorer · ISLE Editor Documentation</title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="description" content="">
         <meta name="generator" content="GitBook 3.2.2">
@@ -61,10 +61,10 @@
     <link rel="shortcut icon" href="../gitbook/images/favicon.ico" type="image/x-icon">
 
     
-    <link rel="next" href="spinner.md" />
+    <link rel="next" href="data-table.html" />
     
     
-    <link rel="prev" href="markdown-editor.html" />
+    <link rel="prev" href="dashboard.html" />
     
 
     </head>
@@ -204,7 +204,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.2" data-path="data-explorer.html">
+        <li class="chapter active" data-level="1.4.2" data-path="data-explorer.html">
             
                 <a href="data-explorer.html">
             
@@ -542,7 +542,7 @@
             
         </li>
     
-        <li class="chapter active" data-level="1.4.10.6" data-path="playground.html">
+        <li class="chapter " data-level="1.4.10.6" data-path="playground.html">
             
                 <a href="playground.html">
             
@@ -1687,7 +1687,7 @@
     <!-- Title -->
     <h1>
         <i class="fa fa-circle-o-notch fa-spin"></i>
-        <a href=".." >Playground</a>
+        <a href=".." >Data Explorer</a>
     </h1>
 </div>
 
@@ -1702,28 +1702,7 @@
     
                                 <section class="normal markdown-section">
                                 
-                                <pre class="language-"><code class="lang-js"><span class="token operator">&lt;</span>Playground style <span class="token operator">=</span> <span class="token punctuation">{</span><span class="token punctuation">{</span> position<span class="token punctuation">:</span> <span class="token string">&quot;absolute&quot;</span><span class="token punctuation">,</span>  
-    left<span class="token punctuation">:</span> <span class="token number">10</span><span class="token punctuation">,</span> 
-    top<span class="token punctuation">:</span> <span class="token string">&apos;0px&apos;</span><span class="token punctuation">,</span>
-    width<span class="token punctuation">:</span> <span class="token string">&apos;800px&apos;</span><span class="token punctuation">}</span><span class="token punctuation">}</span>
-    code<span class="token operator">=</span><span class="token punctuation">{</span><span class="token template-string"><span class="token string">`&lt;JSShell
-        code = &quot;var a = 22;&quot;
-    /&gt;`</span></span><span class="token punctuation">}</span>
-    scope<span class="token operator">=</span><span class="token punctuation">{</span><span class="token punctuation">{</span>
-        JSShell<span class="token punctuation">,</span> Wikipedia
-    <span class="token punctuation">}</span><span class="token punctuation">}</span>
-<span class="token operator">/</span><span class="token operator">&gt;</span>
-</code></pre>
-<pre class="language-"><code class="lang-js"><span class="token operator">&lt;</span>Playground style <span class="token operator">=</span> <span class="token punctuation">{</span><span class="token punctuation">{</span> position<span class="token punctuation">:</span> <span class="token string">&quot;absolute&quot;</span><span class="token punctuation">,</span>  
-    left<span class="token punctuation">:</span> <span class="token number">10</span><span class="token punctuation">,</span> 
-    top<span class="token punctuation">:</span> <span class="token string">&apos;0px&apos;</span><span class="token punctuation">,</span>
-    width<span class="token punctuation">:</span> <span class="token string">&apos;800px&apos;</span><span class="token punctuation">}</span><span class="token punctuation">}</span>
-    code<span class="token operator">=</span><span class="token punctuation">{</span><span class="token template-string"><span class="token string">`&lt;Wikipedia /&gt;`</span></span><span class="token punctuation">}</span>
-    scope<span class="token operator">=</span><span class="token punctuation">{</span><span class="token punctuation">{</span>
-        Wikipedia
-    <span class="token punctuation">}</span><span class="token punctuation">}</span>
-<span class="token operator">/</span><span class="token operator">&gt;</span>
-</code></pre>
+                                <h1 id="data-explorer">Data Explorer</h1>
 
                                 
                                 </section>
@@ -1751,12 +1730,12 @@
 
             
                 
-                <a href="markdown-editor.html" class="navigation navigation-prev " aria-label="Previous page: Markdown Editor">
+                <a href="dashboard.html" class="navigation navigation-prev " aria-label="Previous page: Dashboard">
                     <i class="fa fa-angle-left"></i>
                 </a>
                 
                 
-                <a href="spinner.md" class="navigation navigation-next " aria-label="Next page: Spinner">
+                <a href="data-table.html" class="navigation navigation-next " aria-label="Next page: Data Table">
                     <i class="fa fa-angle-right"></i>
                 </a>
                 
@@ -1767,7 +1746,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Playground","level":"1.4.10.6","depth":3,"next":{"title":"Spinner","level":"1.4.10.7","depth":3,"path":"components/spinner.md","ref":"components/spinner.md","articles":[]},"previous":{"title":"Markdown Editor","level":"1.4.10.5","depth":3,"path":"components/markdown-editor.md","ref":"components/markdown-editor.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/playground.md","mtime":"2017-12-27T16:15:18.816Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2017-12-30T12:53:13.746Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Data Explorer","level":"1.4.2","depth":2,"next":{"title":"Data Table","level":"1.4.3","depth":2,"path":"components/data-table.md","ref":"components/data-table.md","articles":[]},"previous":{"title":"Dashboard","level":"1.4.1","depth":2,"path":"components/dashboard.md","ref":"components/dashboard.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/data-explorer.md","mtime":"2017-12-30T12:47:25.395Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2017-12-30T12:53:13.746Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
