--- a/components/data-table.html
+++ b/components/data-table.html
@@ -64,7 +64,7 @@
     <link rel="next" href="../chapters/display.html" />
     
     
-    <link rel="prev" href="data-explorer.md" />
+    <link rel="prev" href="data-explorer.html" />
     
 
     </head>
@@ -204,9 +204,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.2" data-path="data-explorer.md">
+        <li class="chapter " data-level="1.4.2" data-path="data-explorer.html">
             
-                <span>
+                <a href="data-explorer.html">
             
                     
                     Data Explorer
@@ -340,9 +340,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.5" data-path="experiment.md">
+        <li class="chapter " data-level="1.4.5" data-path="experiment.html">
             
-                <span>
+                <a href="experiment.html">
             
                     
                     Experiment
@@ -419,9 +419,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.9.2" data-path="number-survey.md">
+        <li class="chapter " data-level="1.4.9.2" data-path="number-survey.html">
             
-                <span>
+                <a href="number-survey.html">
             
                     
                     Number Survey
@@ -749,9 +749,9 @@
             <ul class="articles">
                 
     
-        <li class="chapter " data-level="1.4.13.1" data-path="iframe.md">
+        <li class="chapter " data-level="1.4.13.1" data-path="iframe.html">
             
-                <span>
+                <a href="iframe.html">
             
                     
                     IFrame
@@ -762,9 +762,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.13.2" data-path="image.md">
+        <li class="chapter " data-level="1.4.13.2" data-path="image.html">
             
-                <span>
+                <a href="image.html">
             
                     
                     Image
@@ -943,9 +943,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.15.7" data-path="word-cloud.md">
+        <li class="chapter " data-level="1.4.15.7" data-path="word-cloud.html">
             
-                <span>
+                <a href="word-cloud.html">
             
                     
                     Word Cloud
@@ -1613,6 +1613,32 @@
             
         </li>
     
+        <li class="chapter " data-level="1.6.4" data-path="login.html">
+            
+                <a href="login.html">
+            
+                    
+                    Login
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.6.5" data-path="signup.html">
+            
+                <a href="signup.html">
+            
+                    
+                    Signup
+            
+                </a>
+            
+
+            
+        </li>
+    
 
             </ul>
             
@@ -1724,7 +1750,7 @@
 
             
                 
-                <a href="data-explorer.md" class="navigation navigation-prev " aria-label="Previous page: Data Explorer">
+                <a href="data-explorer.html" class="navigation navigation-prev " aria-label="Previous page: Data Explorer">
                     <i class="fa fa-angle-left"></i>
                 </a>
                 
@@ -1740,7 +1766,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Data Table","level":"1.4.3","depth":2,"next":{"title":"Display","level":"1.4.4","depth":2,"path":"chapters/display.md","ref":"chapters/display.md","articles":[{"title":"Draggable Grid","level":"1.4.4.1","depth":3,"path":"components/draggable-grid.md","ref":"components/draggable-grid.md","articles":[]},{"title":"Draggable List","level":"1.4.4.2","depth":3,"path":"components/draggable-list.md","ref":"components/draggable-list.md","articles":[]},{"title":"Enlargeable Grid","level":"1.4.4.3","depth":3,"path":"components/enleargeable-grid.md","ref":"components/enleargeable-grid.md","articles":[]},{"title":"Grid","level":"1.4.4.4","depth":3,"path":"components/grid.md","ref":"components/grid.md","articles":[]},{"title":"Pages","level":"1.4.4.5","depth":3,"path":"components/pages.md","ref":"components/pages.md","articles":[]},{"title":"Slider","level":"1.4.4.6","depth":3,"path":"components/slider.md","ref":"components/slider.md","articles":[]},{"title":"Switch","level":"1.4.4.7","depth":3,"path":"components/switch.md","ref":"components/switch.md","articles":[]}]},"previous":{"title":"Data Explorer","level":"1.4.2","depth":2,"path":"components/data-explorer.md","ref":"components/data-explorer.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/data-table.md","mtime":"2017-12-30T12:34:37.000Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2017-12-30T12:36:18.339Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Data Table","level":"1.4.3","depth":2,"next":{"title":"Display","level":"1.4.4","depth":2,"path":"chapters/display.md","ref":"chapters/display.md","articles":[{"title":"Draggable Grid","level":"1.4.4.1","depth":3,"path":"components/draggable-grid.md","ref":"components/draggable-grid.md","articles":[]},{"title":"Draggable List","level":"1.4.4.2","depth":3,"path":"components/draggable-list.md","ref":"components/draggable-list.md","articles":[]},{"title":"Enlargeable Grid","level":"1.4.4.3","depth":3,"path":"components/enleargeable-grid.md","ref":"components/enleargeable-grid.md","articles":[]},{"title":"Grid","level":"1.4.4.4","depth":3,"path":"components/grid.md","ref":"components/grid.md","articles":[]},{"title":"Pages","level":"1.4.4.5","depth":3,"path":"components/pages.md","ref":"components/pages.md","articles":[]},{"title":"Slider","level":"1.4.4.6","depth":3,"path":"components/slider.md","ref":"components/slider.md","articles":[]},{"title":"Switch","level":"1.4.4.7","depth":3,"path":"components/switch.md","ref":"components/switch.md","articles":[]}]},"previous":{"title":"Data Explorer","level":"1.4.2","depth":2,"path":"components/data-explorer.md","ref":"components/data-explorer.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/data-table.md","mtime":"2017-12-30T12:34:37.000Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2017-12-30T12:53:13.746Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
