--- a/components/free-text-survey.html
+++ b/components/free-text-survey.html
@@ -61,7 +61,7 @@
     <link rel="shortcut icon" href="../gitbook/images/favicon.ico" type="image/x-icon">
 
     
-    <link rel="next" href="number-survey.md" />
+    <link rel="next" href="number-survey.html" />
     
     
     <link rel="prev" href="../chapters/group-interaction.html" />
@@ -204,9 +204,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.2" data-path="data-explorer.md">
+        <li class="chapter " data-level="1.4.2" data-path="data-explorer.html">
             
-                <span>
+                <a href="data-explorer.html">
             
                     
                     Data Explorer
@@ -340,9 +340,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.5" data-path="experiment.md">
+        <li class="chapter " data-level="1.4.5" data-path="experiment.html">
             
-                <span>
+                <a href="experiment.html">
             
                     
                     Experiment
@@ -419,9 +419,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.9.2" data-path="number-survey.md">
+        <li class="chapter " data-level="1.4.9.2" data-path="number-survey.html">
             
-                <span>
+                <a href="number-survey.html">
             
                     
                     Number Survey
@@ -749,9 +749,9 @@
             <ul class="articles">
                 
     
-        <li class="chapter " data-level="1.4.13.1" data-path="iframe.md">
+        <li class="chapter " data-level="1.4.13.1" data-path="iframe.html">
             
-                <span>
+                <a href="iframe.html">
             
                     
                     IFrame
@@ -762,9 +762,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.13.2" data-path="image.md">
+        <li class="chapter " data-level="1.4.13.2" data-path="image.html">
             
-                <span>
+                <a href="image.html">
             
                     
                     Image
@@ -943,9 +943,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.15.7" data-path="word-cloud.md">
+        <li class="chapter " data-level="1.4.15.7" data-path="word-cloud.html">
             
-                <span>
+                <a href="word-cloud.html">
             
                     
                     Word Cloud
@@ -1613,6 +1613,32 @@
             
         </li>
     
+        <li class="chapter " data-level="1.6.4" data-path="login.html">
+            
+                <a href="login.html">
+            
+                    
+                    Login
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.6.5" data-path="signup.html">
+            
+                <a href="signup.html">
+            
+                    
+                    Signup
+            
+                </a>
+            
+
+            
+        </li>
+    
 
             </ul>
             
@@ -1726,7 +1752,7 @@
                 </a>
                 
                 
-                <a href="number-survey.md" class="navigation navigation-next " aria-label="Next page: Number Survey">
+                <a href="number-survey.html" class="navigation navigation-next " aria-label="Next page: Number Survey">
                     <i class="fa fa-angle-right"></i>
                 </a>
                 
@@ -1737,7 +1763,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Free Text Survey","level":"1.4.9.1","depth":3,"next":{"title":"Number Survey","level":"1.4.9.2","depth":3,"path":"components/number-survey.md","ref":"components/number-survey.md","articles":[]},"previous":{"title":"Group Interaction","level":"1.4.9","depth":2,"path":"chapters/group-interaction.md","ref":"chapters/group-interaction.md","articles":[{"title":"Free Text Survey","level":"1.4.9.1","depth":3,"path":"components/free-text-survey.md","ref":"components/free-text-survey.md","articles":[]},{"title":"Number Survey","level":"1.4.9.2","depth":3,"path":"components/number-survey.md","ref":"components/number-survey.md","articles":[]},{"title":"Proportions Survey","level":"1.4.9.3","depth":3,"path":"components/proportions-survey.md","ref":"components/proportions-survey.md","articles":[]},{"title":"Survey Generator","level":"1.4.9.4","depth":3,"path":"components/survey-generator.md","ref":"components/survey-generator.md","articles":[]}]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/free-text-survey.md","mtime":"2017-12-29T20:02:06.990Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2017-12-30T12:36:18.339Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Free Text Survey","level":"1.4.9.1","depth":3,"next":{"title":"Number Survey","level":"1.4.9.2","depth":3,"path":"components/number-survey.md","ref":"components/number-survey.md","articles":[]},"previous":{"title":"Group Interaction","level":"1.4.9","depth":2,"path":"chapters/group-interaction.md","ref":"chapters/group-interaction.md","articles":[{"title":"Free Text Survey","level":"1.4.9.1","depth":3,"path":"components/free-text-survey.md","ref":"components/free-text-survey.md","articles":[]},{"title":"Number Survey","level":"1.4.9.2","depth":3,"path":"components/number-survey.md","ref":"components/number-survey.md","articles":[]},{"title":"Proportions Survey","level":"1.4.9.3","depth":3,"path":"components/proportions-survey.md","ref":"components/proportions-survey.md","articles":[]},{"title":"Survey Generator","level":"1.4.9.4","depth":3,"path":"components/survey-generator.md","ref":"components/survey-generator.md","articles":[]}]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/free-text-survey.md","mtime":"2017-12-29T20:02:06.990Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2017-12-30T12:53:13.746Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
