Add steelblue to panel header

--- a/app/css/lesson.css
+++ b/app/css/lesson.css
@@ -63,7 +63,8 @@ body {
 
 #Lesson .panel-heading {
 	background-image: none;
-	box-shadow: 1px 1px 1px darkgrey;
+	background: lightsteelblue;
+
 }
 
 #Lesson .popover {
