--- a/app/components/pages/pages.css
+++ b/app/components/pages/pages.css
@@ -1,9 +1,10 @@
 .page {
-	background: transparent;
+	background: white;
 	margin-bottom: 30px;
-	border-top:solid 2px darkgrey;
-	border-bottom:solid 2px darkrey;
 	padding-bottom: 30px;
+	border: 1px solid  rgba(92,92,92, 0.6);
+	border-radius: 6px;
+	box-shadow: 0 0 4px rgba(92,92,92, 0.5);
 }
 
 .my-pagination {
