--- a/app/components/multiple-choice-question/multiple-choice-styles.css
+++ b/app/components/multiple-choice-question/multiple-choice-styles.css
@@ -14,3 +14,11 @@
 .multiple-choice-answer {
     line-height: 22px !important;
 }
+
+.question label
+{
+font-weight: 500;
+font-stretch: extra-expanded;
+color: #2e4468;
+text-shadow: 0 0 1px  rgba(92,92,92, 0.5);
+}
