--- a/app/css/lesson.css
+++ b/app/css/lesson.css
@@ -63,9 +63,17 @@ body {
 
 #Lesson .panel-heading {
 	background-image: none;
-	background: lightsteelblue;
+	background: rgba(176, 192, 222, 0.15);
 
 }
+
+#Lesson .panel-default {
+	border: 1px solid  rgba(92,92,92, 0.6);
+	border-radius: 6px;
+	box-shadow: 0 0 8px rgba(92,92,92, 0.5);
+}
+
+
 
 #Lesson .popover {
 	font-family: 'Open Sans', sans-serif;
