Update styles and render message if no data collected so far

--- a/app/components/number-survey/number-survey.css
+++ b/app/components/number-survey/number-survey.css
@@ -1,4 +1,4 @@
-.free-text-survey {
+.number-survey {
 	border: 1px solid rgba(92,92,92,0.6);
 	border-radius: 6px;
 	box-shadow: 0 0 4px rgba(92,92,92,0.5);
