Update component and fix tests

--- a/app/components/pages/pages.css
+++ b/app/components/pages/pages.css
@@ -21,3 +21,11 @@
 	border-style: solid;
 	background: transparent;
 }
+
+.visible-page {
+	display: inline;
+}
+
+.invisible-page {
+	display: none;
+}
