Render newlines in dataset description

--- a/app/components/data-table/data_table.css
+++ b/app/components/data-table/data_table.css
@@ -13,3 +13,9 @@
 	font-size: 21px;
 	letter-spacing: 2.5px;
 }
+
+.variable-description-button {
+	float: right;
+	margin-top: -2px;
+	margin-right: 7px;
+}
