Updated the styling of table-select to center the button and create column view

--- a/app/components/markdown-editor/table-select.css
+++ b/app/components/markdown-editor/table-select.css
@@ -8,6 +8,7 @@ table.tableSelect {
 
 table.tableSelect tr td.cell {
 	border: 1px solid;
+	cursor: pointer;
 }
 
 table.tableSelect tr td.grid_select {
@@ -20,9 +21,31 @@ table.tableSelect tr td.cell:hover {
 
 table.tableSelect tr td.grid_select {
 	background-color: gray;
-	border: 2px solid;
+	border: 1.25px solid;
+	cursor: pointer;
 }
 
 table.tableSelect tr td.grid_select:hover {
 	background-color: yellow;
+	cursor: pointer
+}
+
+.selected_cols {
+	background-color: #D3E272;
+	border: 1.5px solid;
+	padding: 4px 4px;
+	text-align: center;
+	border-bottom: 3.5px solid #444444;
+}
+
+.un_selected_cols {
+	background-color: #CB97F0;
+	border: 1.5px solid;
+	padding: 4px 4px;
+	text-align: center;
+	border-bottom: 3.5px solid #444444;
+}
+
+.titleTable {
+	margin: 0 auto;
 }
