Reduce text shadow

--- a/app/components/free-text-question/free-text-question.css
+++ b/app/components/free-text-question/free-text-question.css
@@ -11,7 +11,7 @@
 	font-stretch: extra-expanded;
 	font-weight: 500;
 	color: #2e4468;
-	text-shadow: 0 0 1px  rgba(92,92,92, 0.5);
+	text-shadow: 0 0 0.1px rgba(92,92,92,0.5);
 }
 
 .free-text-question-toolbar {
