--- a/app/components/number-question/number-question.css
+++ b/app/components/number-question/number-question.css
@@ -10,6 +10,6 @@
 .number-question label {
 	font-weight: 500;
 	color: #2e4468;
-	text-shadow: 0 0 1px  rgba(92,92,92, 0.5);
+	text-shadow: 0 0 0.1px rgba(92,92,92,0.5);
 }
 
