--- a/app/components/match-list-question/match_list_question.css
+++ b/app/components/match-list-question/match_list_question.css
@@ -5,18 +5,17 @@
 	background-color: white;
 	flex-direction: column;
 	max-width: 650px;
-	border: 1px solid  rgba(92,92,92, 0.6);
+	border: 1px solid  rgba(92,92,92,0.6);
 	border-radius: 6px;
-	box-shadow: 0 0 4px rgba(92,92,92, 0.5);
+	box-shadow: 0 0 4px rgba(92,92,92,0.5);
 	margin-bottom: 15px;
 }
-
 
 .match-list-question-container .question {
 	font-stretch: extra-expanded;
 	font-weight: 500;
 	color: #2e4468;
-	text-shadow: 0 0 1px  rgba(92,92,92, 0.5);
+	text-shadow: 0 0 0.1px rgba(92,92,92,0.5);
 }
 
 .match-list-question-lists {
