--- a/app/components/multiple-choice-question/multiple-choice-styles.css
+++ b/app/components/multiple-choice-question/multiple-choice-styles.css
@@ -1,5 +1,5 @@
 .multiple-choice-question-container {
-	border: 1px solid  rgba(92,92,92, 0.6);
+	border: 1px solid rgba(92,92,92, 0.6);
 	border-radius: 6px;
 	box-shadow: 0 0 8px rgba(92,92,92, 0.5);
 	margin: 0 auto 10px;
@@ -19,5 +19,5 @@
 	font-weight: 500;
 	font-stretch: extra-expanded;
 	color: #2e4468;
-	text-shadow: 0 0 1px  rgba(92,92,92, 0.5);
+	text-shadow: 0 0 0.1px rgba(92,92,92,0.5);
 }
