Moved styling of input_button to the css file to avoid styling within the ReactDOM.render() method

--- a/app/components/markdown-editor/markdown_editor.css
+++ b/app/components/markdown-editor/markdown_editor.css
@@ -69,3 +69,18 @@
 	width: 40px !important;
 	height: 30px !important;
 }
+
+.font_size_input {
+	width: 40px !important;
+	height: 30px !important;
+}
+
+.page_width_button {
+	width: 55px !important;
+	height: 30px !important;
+}
+
+.page_height_button {
+	width: 55px !important;
+	height: 30px !important;
+}
