Added page size selector in the toolbar

--- a/app/components/markdown-editor/markdown_editor.css
+++ b/app/components/markdown-editor/markdown_editor.css
@@ -75,12 +75,12 @@
 	height: 30px !important;
 }
 
-.page_width_button {
-	width: 55px !important;
+.page_size_holder_name {
+	width: 100px !important;
 	height: 30px !important;
 }
 
-.page_height_button {
-	width: 55px !important;
+.select_page_size {
+	width: 100px !important;
 	height: 30px !important;
 }
